--- a/example1.html
+++ b/example1.html
@@ -4,5 +4,78 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
   </head>
   <body>
+    <nav class="navbar navbar-light bg-faded">
+      <div class="container">
+        <div class="nav navbar-nav">
+          <a class="navbar-brand" href="#">CSE 3345</a>
+          <a class="nav-item nav-link" href="#">Home</a>
+          <a class="nav-item nav-link active" href="#">Assignments<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Lectures</a>
+          <a class="nav-item nav-link" href="#">Contact</a>
+          <a class="nav-item pull-xs-right nav-link" href="#">Logout</a>
+          <a class="nav-item pull-xs-right nav-link" href="#">Account</a>
+        </div>
+      </div>
+    </nav>
+    <div class="container" style = "padding-top: 1.5rem">
+        <div class="col-md-3">
+            <ul class="list-group">
+              <l1 class="list-group-item" style= "background-color: #e9e9e9">Your Assignments</l1>
+              <li class="list-group-item list-group-item-success"><span class="label label-success label-pill pull-xs-right">92</span>Assignment #1</li>
+              <li class="list-group-item list-group-item-success"><span class="label label-success label-pill pull-xs-right">100</span>Assignment #2</li>
+              <li class="list-group-item list-group-item-warning"><span class="label label-warning label-pill pull-xs-right">74</span>Assignment #3</li>
+              <li class="list-group-item list-group-item-danger"><span class="label label-danger label-pill pull-xs-right">23</span>Assignment #4</li>
+              <li class="list-group-item list-group-item-success"><span class="label label-success label-pill pull-xs-right">95</span>Assignment #5</li>
+            </ul>
+        </div>
+        <div class="col-md-9">
+          <h1>Assignment 1</h1>
+          <p>In this assignment, you will be making a thing!</p>
+          <div class="alert alert-success" role="alert">
+            <strong>Well done! </strong>You got a 92 on this assignment!
+          </div>
+          <div class="panel panel-default" style="padding-top: 3.5rem">
+            <div class="panel-body">
+              <h3><strong>Grading Rubric</strong></h3>
+            </div>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Description</th>
+                  <th>Available Points</th>
+                  <th>Your Points</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><strong>1</strong></td>
+                  <td>You put the right stuff in the thing</td>
+                  <td>40</td>
+                  <td>40</td>
+                </tr>
+                <tr>
+                  <td><strong>2</strong></td>
+                  <td>You put the stuff in the right places</td>
+                  <td>40</td>
+                  <td>40</td>
+                </tr>
+                <tr>
+                  <td><strong>3</strong></td>
+                  <td>Style points</td>
+                  <td>20</td>
+                  <td>12</td>
+                </tr>
+                <tr style="background-color: #e9e9e9">
+                <td></td>
+                <td style= "text-align: right"><strong>Total</strong></td>
+                <td>100</td>
+                <td>92</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+    </div>
   </body>
 </html>
