--- a/example1.html
+++ b/example1.html
@@ -34,7 +34,7 @@
           <div class="alert alert-success" role="alert">
             <strong>Well done! </strong>You got a 92 on this assignment!
           </div>
-          <div class="panel panel-default" style="padding-top: 3.5rem">
+          <div class="panel panel-default" style="padding-top: 3.5rem; padding-bottom: 2rem">
             <div class="panel-body">
               <h3><strong>Grading Rubric</strong></h3>
             </div>
@@ -74,6 +74,41 @@
                 </tr>
               </tbody>
             </table>
+          </div>
+          <div class="col-md-6">
+            <h3><strong>Comments</strong></h3>
+            <p> In eros urna, scelerisque ut est non, ultrices ultrices nunc. Cras rhoncus diam venenatis, ultricies lectus nec, ullamcorper eros. Sed elementum sit amet nunc id vulputate. Donec a ullamcorper libero. Nulla ultricies egestas porttitor.</p>
+          </div>
+          <div class="col-md-6">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <h4><strong>Get Bonus Points</strong></h4>
+                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce sit amet hendrerit dui, eu feugiat turpis</p>
+                <button type="button" class="btn btn-primary">Start Bonus Exercise</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-9 m-t-2">
+            <h3><strong>Dispute Grade</strong></h3>
+            <form class = "form m-y-1">
+              <fieldset class="form-group row">
+                <label for="inputComplaint" class="col-sm-2">Complaint</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control m-l-3" id="inputComplaint" placeholder="Your complaint">
+                </div>
+              </fieldset>
+              <fieldset class="form-group row">
+                  <label for="inReason" class="col-sm-2">Your Reason</label>
+                  <div class="col-sm-10">
+                    <textarea class="form-control m-l-3" id="inReason" rows="3" placeholder="Your reason"></textarea>
+                  </div>
+              </fieldset>
+              <fieldset class="from-group row">
+                <div class= "col-sm-offset-3 col-sm-10">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+              </fieldset>
+            </form>
           </div>
         </div>
     </div>
