changed panel to card

--- a/example1.html
+++ b/example1.html
@@ -80,8 +80,8 @@
             <p> In eros urna, scelerisque ut est non, ultrices ultrices nunc. Cras rhoncus diam venenatis, ultricies lectus nec, ullamcorper eros. Sed elementum sit amet nunc id vulputate. Donec a ullamcorper libero. Nulla ultricies egestas porttitor.</p>
           </div>
           <div class="col-md-6">
-            <div class="panel panel-default">
-              <div class="panel-body">
+            <div class="card">
+              <div class="card-block">
                 <h4><strong>Get Bonus Points</strong></h4>
                 <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce sit amet hendrerit dui, eu feugiat turpis</p>
                 <button type="button" class="btn btn-primary">Start Bonus Exercise</button>
