no real changes

--- a/example2.html
+++ b/example2.html
@@ -4,5 +4,15 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
   </head>
   <body>
+    <nav class="navbar navbar-light bg-faded">
+      <div class="container">
+        <div class="nav navbar-nav">
+          <a class="navbar-brand" href="#"><img src="anteater.png"></a>
+          <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Anteater Forum</a>
+          <a class="nav-item nav-link" href="#">About Anteaters</a>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
