--- a/example2.html
+++ b/example2.html
@@ -2,6 +2,7 @@
   <head>
     <title>Recreating a Wireframe with Bootstrap</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="example2.css">
   </head>
   <body>
     <nav class="navbar navbar-light bg-faded">
@@ -14,5 +15,39 @@
         </div>
       </div>
     </nav>
+    <div class= "banner"></div>
+    <div class= "card col-md-3" id="callout">
+      <h3><strong>Apply now to be an Anteater Aficionado!</strong></h3>
+      <p> If you apply now to be an Anteater Aficionado, you will receive all of the bounties of my love. BUT WAIT! THERE'S MORE! You will also receive an anteater plushee (not including shipping and handling) THIS IS A $19.99 value ABSOLUTELY free!!!</p>
+      <button class="btn btn-primary m-b-1 pull-xs-right">Apply!</button>
+    </div>
+    <div class="container">
+      <div class="col-md-4">
+        <div class="card m-y-3">
+          <h4 class="card-title m-l-1">Contact form</h4>
+          <form class = "form m-y-1">
+            <fieldset class="form-group row">
+              <div class="col-sm-10">
+                <input type="text" class="form-control m-l-1" id="inputName" placeholder="Your name">
+              </div>
+            </fieldset>
+            <fieldset class="form-group row">
+                <div class="col-sm-10">
+                  <input type="email" class="form-control m-l-1" id="inEmail" rows="3" placeholder="Your e-mail">
+                </div>
+            </fieldset>
+            <fieldset class="from-group row">
+              <div class= "col-sm-offset-1">
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+      <div class="main col-md-8 m-t-3">
+        <h2>All about Anteaters!</h2>
+        <p> All anteaters have elongated snouts equipped with a thin tongue that can be extended to a length greater than the length of the head; their tube-shaped mouths have lips but no teeth. They use their large, curved foreclaws to tear open ant and termite mounds and for defense, while their dense and long fur protects them from attacks from the insects. All species except the giant anteater have a long prehensile tail.</p>
+      </div>
+    </div>
   </body>
 </html>
